gitops/core/vault/vault-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
